--- a/src/com/raven/form/Compra_Form.form
+++ b/src/com/raven/form/Compra_Form.form
@@ -463,7 +463,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel12">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ver total"/>
+            <Property name="text" type="java.lang.String" value="0,00"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel13">
@@ -473,7 +473,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabeVerGanancia">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ver ganancias"/>
+            <Property name="text" type="java.lang.String" value="0,00"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel15">
@@ -483,7 +483,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelVerPorcentajeDeLaGanancia">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ver porcentaje de la ganancia"/>
+            <Property name="text" type="java.lang.String" value="NaN%"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel14">
