--- a/src/com/raven/form/Compra_Form.form
+++ b/src/com/raven/form/Compra_Form.form
@@ -49,6 +49,8 @@
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="jComboBoxClientes" min="-2" pref="200" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="jTextFieldBuscador" min="-2" pref="200" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="jButtonBuscarCliente" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -164,6 +166,7 @@
                       <Component id="jButtonEliminarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButtonBuscarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jComboBoxClientes" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTextFieldBuscador" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -507,6 +510,11 @@
           </SubComponents>
         </Container>
         <Component class="javax.swing.JTextField" name="jTextFieldIdCliente">
+        </Component>
+        <Component class="javax.swing.JTextField" name="jTextFieldBuscador">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldBuscadorActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
